# jrt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/jsons/: simple.json  stuff.json
examples/load_ontologies/ontologies/: additional.xml  stuff.xml
examples/scripts/: build_with_custom_rules.py  build_with_ontologies.py  build_without_ontologies.py
jrt/: __init__.py  builder.py  builders.py  cli.py  constants.py  datatypes.py  loaders.py  models.py  ontology.py
tests/: conftest.py  test_builder.py  test_cli.py  test_datatypes.py  test_ontology.py  test_package.py
